# CGMiniProjectSAILAWAY

./: CMakeLists.txt
src/: Sample_GL.vert  background.cpp  background.h  barrel.cpp  barrel.h  boat.cpp  boat.h  color.cpp  details.cpp  details.h  engine.cpp  engine.h  input.cpp  main.cpp  main.h  map.h  models.cpp  monster.cpp  monster.h  nonedit.cpp  numbers.cpp  numbers.h  rock.cpp  rock.h
